# psg-playground

./: README.md  pyproject.toml
demo_programs/: design_pattern_2_persistent_window_with_updates.py
trinket/demo_programs/: design_pattern_1_the_one_shot.py
trinket/tables/: table_element.py
