[tool.poetry]
name = "psg-playground"
version = "0.1.0"
description = "A collection of PySimpleGUI examples."
authors = ["n8jhj <n8jhj@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
PySimpleGUI = "^4.49.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
